# volra

./: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.proxy  LICENSE  Makefile  README.md  go.mod  go.sum  guide.md  install.sh  tools.go
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_bmad-output/: execution-log.yaml
_bmad-output/brainstorming/: brainstorming-session-2026-03-02.md  market-research-2026-03-04.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-build-system.md  1-2-output-system-presenter-error-types-error-catalog.md  1-3-docker-runner-test-infrastructure.md  1-4-doctor-command.md  2-1-agentfile-schema-validation.md  2-2-project-scanning-detection-engine.md  2-3-init-command-pipeline.md  3-1-dockerfile-generation.md  3-3-prometheus-configuration-alert-rules.md  3-4-grafana-dashboards-provisioning.md  3-5-deploy-orchestration.md  3-6-health-check-verification.md  3-7-deploy-command-pipeline-output.md  4-1-status-health-reporting.md  4-2-docker-daemon-detection-status-cli-wiring.md  5-1-cross-compilation-release-pipeline.md  5-2-install-script.md  5-3-open-source-project-artifacts.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  (+6 more)
docs/: mcp-integration.md
test-polyglot-agent/: .env.example  .gitignore  Agentfile  main.py  requirements.txt
volra-observe/: README.md  pyproject.toml
volra-observe/src/volra_observe/: __init__.py  _metrics.py  pricing.py
volra-observe/tests/: test_metrics.py  test_pricing.py
(+364 files in other folders)
