[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volra-observe"
version = "0.1.0"
description = "Framework-agnostic LLM observability for Volra agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Antonio Romero" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/romerox3/volra"
Documentation = "https://github.com/romerox3/volra/tree/main/volra-observe"

[tool.hatch.build.targets.wheel]
packages = ["src/volra_observe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
